# WiFi-Nightmare

./: .gitignore  CHANGELOG.md  PROJECT_MAP.md  README.md  install.sh  pyproject.toml
.github/workflows/: build-deb.yml
ESP32-DePortal2/: ESP32-Deauther-master.code-workspace  platformio.ini
ESP32-DePortal2/data/: index.html
ESP32-DePortal2/include/: deauth.h  definitions.h  html_content.h  state.h  web_html.h
ESP32-DePortal2/src/: deauth.cpp  main.cpp  serial_handler.cpp  state.cpp
ESP8266-DePortal2/: README.md  platformio.ini
ESP8266-DePortal2/data/: index.html
ESP8266-DePortal2/include/: definitions.h  serial_handler.h  types.h  web_html.h
ESP8266-DePortal2/src/: main.cpp  serial_handler.cpp  state.cpp
WiFi-Nightmare/: __init__.py  attacker.py  attacks.py  capture_native.py  client_recon.py  config.py  config.yaml  cracker.py  database.py  deauth.py  esp_driver.py  evil_twin_software.py  eviltwin.py  handshake.py  logger.py  main.py  pixie_dust.py  requirements.txt  scanner.py  ui.py  utils.py  vendors.py  vendors_cache.json  vif_check.py
debian/: changelog  control  copyright  debhelper-build-stamp  files  install  postinst  rules  wifi-nightmare.postinst.debhelper  wifi-nightmare.prerm.debhelper  wifi-nightmare.substvars
dists/stable/: Release
tests/: test_core.py
wifi_nightmare/: __init__.py  attacks.py  capture_native.py  config.py  database.py  deauth.py  dep_check.py  esp_driver.py  evil_twin_software.py  eviltwin.py  flash_esp.py  logger.py  mac-vendor.txt  main.py  portals.py  scanner.py  utils.py  vendors.py
(+10 files in other folders)
